moved signUp from auth module  to user and add route to User docs
